# deta-webp-demo

./: main.py  pyproject.toml  requirements.txt
templates/: index.html
