[tool.poetry]
name = "deta-demo"
version = "0.1.0"
description = ""
authors = ["granitosaurus <bernardas.alisauskas@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
